# humanoid_robot_ros

./: README.md  requirements.txt
g1_bringup/: CMakeLists.txt  package.xml
g1_bringup/config/: g1_visualization.rviz
g1_bringup/launch/: g1_mujoco_with_urdf.launch  g1_standing_demo.launch  mujoco_bringup.launch  mujoco_bringup_force.launch
g1_control/: CMakeLists.txt  README_general_joint_controller.md  package.xml
g1_control/include/g1_control/: joint_controller.h
g1_control/launch/: joint_controller.launch
g1_control/src/: joint_controller.cpp  joint_controller_main.cpp
g1_description/: CMakeLists.txt  g1_mjx.xml  package.xml
g1_description/config/: g1_standing_pose.yaml  standing_pose.yaml
g1_description/launch/: robot_state_publisher.launch
g1_description/models/: g1_humanoid.xml
g1_description/urdf/: g1_complete.urdf  g1_simple.urdf
g1_mujoco_sim/: CMakeLists.txt  package.xml
g1_mujoco_sim/launch/: mujoco_sim.launch  mujoco_sim_force.launch
g1_mujoco_sim/scripts/: debug_actuators.py  external_force_injector.py  mujoco_sim_node.py  mujoco_sim_with_forces.py  test_mujoco_model.py
humanoid_robot_ros/: CMakeLists.txt  package.xml
